# foxxll

./: .gitmodules  .travis-run.sh  .travis.yml  AUTHORS  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  appveyor.yml  compile.sh
doc/: mainpage.dox
foxxll/: CMakeLists.txt  config.hpp.in  defines.hpp  deprecated.hpp  io.hpp  libfoxxll.hpp  libstxxl.hpp  mng.hpp  msvc_compatibility.hpp  singleton.hpp  unused.hpp  verbose.hpp  version.hpp
foxxll/common/: addressable_queues.hpp  aligned_alloc.hpp  cmdline.cpp  cmdline.hpp  counting_ptr.hpp  die_with_message.hpp  error_handling.hpp  exceptions.hpp  exithandler.cpp  exithandler.hpp  literals.hpp  log.cpp  log.hpp  new_alloc.hpp  onoff_switch.hpp  semaphore.hpp  shared_state.hpp  simple_vector.hpp  timer.hpp  tmeta.hpp  types.hpp  uint_types.hpp  utils.cpp  utils.hpp  verbose.cpp  version.cpp
foxxll/io/: create_file.cpp  create_file.hpp  disk_queued_file.cpp  disk_queued_file.hpp  disk_queues.cpp  disk_queues.hpp  file.cpp  file.hpp  fileperblock_file.cpp  fileperblock_file.hpp  iostats.cpp  iostats.hpp  linuxaio_file.cpp  linuxaio_file.hpp  linuxaio_queue.cpp  linuxaio_queue.hpp  linuxaio_request.cpp  linuxaio_request.hpp  memory_file.cpp  memory_file.hpp  mmap_file.cpp  mmap_file.hpp  request.cpp  request.hpp  request_interface.hpp  request_operations.hpp  request_queue.hpp  request_queue_impl_1q.cpp  request_queue_impl_1q.hpp  request_queue_impl_qwqr.cpp  request_queue_impl_qwqr.hpp  request_queue_impl_worker.cpp  request_queue_impl_worker.hpp  request_target.hpp  request_with_state.cpp  request_with_state.hpp  request_with_waiters.cpp  request_with_waiters.hpp  serving_request.cpp  serving_request.hpp  (+10 more)
foxxll/mng/: async_schedule.cpp  async_schedule.hpp  bid.hpp  block_alloc_strategy.hpp  block_alloc_strategy_interleaved.hpp  block_manager.cpp  block_manager.hpp  block_prefetcher.hpp  block_scheduler.hpp  buf_istream.hpp  buf_istream_reverse.hpp  buf_ostream.hpp  buf_writer.hpp  config.cpp  config.hpp  disk_block_allocator.cpp  disk_block_allocator.hpp  prefetch_pool.hpp  read_write_pool.hpp  typed_block.hpp  write_pool.hpp
include/stxxl/bits/: parallel.h
include/stxxl/bits/io/: fileperblock_file.h
include/stxxl/bits/mng/: async_schedule.h  block_scheduler.h  buf_istream.h
lib/: CMakeLists.txt
lib/algo/: async_schedule.cpp
lib/io/: request_queue_impl_1q.cpp  request_queue_impl_qwqr.cpp  request_with_waiters.cpp
lib/mng/: async_schedule.cpp
misc/: analyze-source.pl  fileheader.txt  travis-run.sh  uncrustify.cfg
misc/cmake/: foxxll-config.cmake.in  foxxll-version.cmake.in  foxxll.pc
tests/: CMakeLists.txt
tests/algo/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_cmdline.cpp  test_counting_ptr.cpp  test_literals.cpp  test_log2.cpp  test_uint_types.cpp
tests/io/: CMakeLists.txt  test_cancel.cpp  test_io.cpp  test_io_sizes.cpp  test_mmap.cpp
tests/mng/: CMakeLists.txt  test_aligned.cpp  test_async_schedule.cpp  test_block_alloc_strategy.cpp  test_block_manager.cpp  test_block_manager1.cpp  test_block_manager2.cpp  test_block_scheduler.cpp  test_bmlayer.cpp  test_buf_streams.cpp  test_config.cpp  test_pool_pair.cpp  test_prefetch_pool.cpp  test_read_write_pool.cpp  test_write_pool.cpp
tools/: CMakeLists.txt  benchmark_disks.cpp  benchmark_disks_random.cpp  benchmark_files.cpp  create_files.cpp  foxxll_tool.cpp
