############################################################################
#  tests/CMakeLists.txt
#
#  Part of FOXXLL. See http://foxxll.org
#
#  Copyright (C) 2013-2014 Timo Bingmann <tb@panthema.net>
#
#  Distributed under the Boost Software License, Version 1.0.
#  (See accompanying file LICENSE_1_0.txt or copy at
#  http://www.boost.org/LICENSE_1_0.txt)
############################################################################

add_subdirectory(common)
add_subdirectory(io)
add_subdirectory(mng)

############################################################################
